[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "textures"
version = "0.0.1"
authors = [
  { name="Marcos Pasa", email="marcos.pasa@ufrgs.br" },
]
description = "Robust statistical tools to quantify discreet rearranging pattern. Implementation of Graner et al., Eur. Phys. J. E 25, 349-369 (2008) DOI 10.1140/epje/i2007-10298-8"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "numba",
    "pyyaml",
    "grids @ git+https://github.com/marcos1561/grids.git"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]